kubernetes/applications/media/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: media
spec:
  selector:
    app: transmission
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 9091
      name: web
    - protocol: TCP
      port: 51413
      targetPort: 51413
      name: torrent-tcp
    - protocol: UDP
      port: 51413
      targetPort: 51413
      name: torrent-udp
