kubernetes/applications/media/transmission/cloudflare-tunnel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission-cloudflare
  namespace: media
  labels:
    app: transmission
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: transmission.kernow.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission
                port:
                  number: 9091
