kubernetes/applications/media/transmission/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: cloudflare-tunnel
  tls:
    - hosts:
        - transmission.kernow.io
      secretName: kernow-io-tls
  rules:
    - host: transmission.kernow.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission
                port:
                  number: 9091
